2009-02-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* INSTALL: Attempt to update.

2009-02-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, bsd_eth_drivers/Makefile.am,
	bsd_eth_drivers/libbsdport/alldrv.c,
	bsd_eth_drivers/libbsdport/libbsdport_api.h: Add first cut at
	Broadcomm BCM57xx driver.
	* bsd_eth_drivers/if_bge/.cvsignore,
	bsd_eth_drivers/if_bge/Makefile.am, bsd_eth_drivers/if_bge/if_bge.c,
	bsd_eth_drivers/if_bge/if_bgereg.h: New files.

2009-02-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsd_eth_drivers/re/if_re.c: Almost runs.

2009-02-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsd_eth_drivers/libbsdport/sysbus.c: Revert Till's patch.

2009-02-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsd_eth_drivers/if_em/e1000_manage.c,
	bsd_eth_drivers/if_em/e1000_manage.h: New files.
	Missed in initial import.

2009-02-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore: Add Makefile.in

2009-02-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, makefile.top.in: Do not have bge driver yet.

2009-02-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore, networkconfig-qemu.h, bsd_eth_drivers/.cvsignore,
	bsd_eth_drivers/if_em/.cvsignore, bsd_eth_drivers/if_le/.cvsignore,
	bsd_eth_drivers/if_pcn/.cvsignore,
	bsd_eth_drivers/libbsdport/.cvsignore,
	bsd_eth_drivers/re/.cvsignore: New files.
