@@ -1,3 +1,7 @@
+2009-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* rtems-pre.am, m4/rtems-fixup-prefix.m4: Install in standard location.
+
 2009-02-20	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* INSTALL: Attempt to update.
